crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_hex_format_verification.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT \n        sha2('test') as hash,\n        LOWER(sha2('test')) = sha2('test') as is_lowercase,\n        LENGTH(sha2('test')) as hex_length\""
---
Ok(
    [
        "+------------------------------------------------------------------+--------------+------------+",
        "| hash                                                             | is_lowercase | hex_length |",
        "+------------------------------------------------------------------+--------------+------------+",
        "| 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08 | true         | 64         |",
        "+------------------------------------------------------------------+--------------+------------+",
    ],
)
