crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_invalid_digest_size_128.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('test', 128)\""
---
Err(
    "Error: Execution error: Invalid digest size: 128. Must be 224, 256, 384, or 512",
)
