crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_invalid_digest_size_negative.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('test', -256)\""
---
Err(
    "Error: Execution error: Invalid digest size: -256. Must be 224, 256, 384, or 512",
)
