crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_invalid_digest_size_zero.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('test', 0)\""
---
Err(
    "Error: Execution error: Invalid digest size: 0. Must be 224, 256, 384, or 512",
)
