crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_multiple_rows.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT \n        data, \n        sha2(data) as hash_value\n    FROM (\n        VALUES \n            ('row1'),\n            ('row2'), \n            ('row3'),\n            (NULL),\n            ('')\n    ) AS t(data)\""
---
Ok(
    [
        "+------+------------------------------------------------------------------+",
        "| data | hash_value                                                       |",
        "+------+------------------------------------------------------------------+",
        "| row1 | 33b8a4c2584fc9f1b6dbf8da314e807cbc29efeb5b73376d1d4196f9cb25dffe |",
        "| row2 | 83f5ad7834a9f5c5fb86daa9d68e9bcd0f457148d19a7a958d608a28c4c214f0 |",
        "| row3 | d817ee70a2663231731f15af5567bd5439d5555c2037905ce1e3f877635d46c0 |",
        "|      |                                                                  |",
        "|      | e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 |",
        "+------+------------------------------------------------------------------+",
    ],
)
