crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_null_digest_size.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('test', NULL)\""
---
Err(
    "Error: Execution error: Digest size must be an integer",
)
