crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_null_input.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2(NULL) as sha2_null, sha2_hex(NULL) as sha2_hex_null\""
---
Ok(
    [
        "+-----------+---------------+",
        "| sha2_null | sha2_hex_null |",
        "+-----------+---------------+",
        "|           |               |",
        "+-----------+---------------+",
    ],
)
