crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_single_characters.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT \n        sha2('a') as char_a,\n        sha2('1') as char_1,\n        sha2('@') as char_at\""
---
Ok(
    [
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
        "| char_a                                                           | char_1                                                           | char_at                                                          |",
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
        "| ca978112ca1bbdcafac231b39a23dc4da786eff8147c4e72b9807785afee48bb | 6b86b273ff34fce19d6b804eff5a3f5747ada4eaa22f1d49c01e52ddb7875b4b | c3641f8544d7c02f3580b07c0f9887f0c6a27ff5ab1d4a3e29caf197cfc299ae |",
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
    ],
)
