crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_special_characters.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT \n        sha2('Hello World!') as hello_world,\n        sha2('123456789') as numbers,\n        sha2('Test@#$%^&*()') as special_chars\""
---
Ok(
    [
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
        "| hello_world                                                      | numbers                                                          | special_chars                                                    |",
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
        "| 7f83b1657ff1fc53b92dc18148a1d65dfc2d4b1fa3d677284addd200126d9069 | 15e2b0d3c33891ebb0f1ef609ec419420c20e320ce94c65fbc8c3312448eb225 | 5e4a121680b1318fe5275302280838d1ca6ab215ad6acd7c0a59a154449e5c10 |",
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
    ],
)
